syntax = "proto3";

option csharp_namespace = "AgentService.Protos";

package AgentService;

service JobA {
	rpc StartJob (StartJobRequest) returns (StartJobReply);
}

message StartJobRequest {
  string JobNumber = 1;
  string MachineName = 2;
  string FolderPath = 3;
}

message StartJobReply {
  string IsStarted = 1;
}