syntax = "proto3";

option csharp_namespace = "ClientService.Protos";

package ClientService;

service JobC {
  rpc StartJob (StartJobRequest) returns (StartJobReply);
}

message StartJobRequest {
  string JobNumber = 1;
  string MachineName = 2;
  string FolderPath = 3;
}

message StartJobReply {
  string IsStarted = 1;
}